--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,39 @@
 services:
   cloudflared:
-    image: cloudflare/cloudflared:latest
+    image: cloudflare/${CLOUDFLARED_VERSION}
     container_name: cloudflared
     restart: unless-stopped
     command: tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}
-    networks:
-      - public_access
-    depends_on:
-      - nginx
     user: "1000:1000"
+    networks:
+      - iot_net
     cap_add:
       - NET_RAW
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx_service
+  iot_postgres:
+    image: postgres:${IOT_POSTGRES_VERSION}
+    container_name: iot_postgres_service
     restart: unless-stopped
     networks:
-      - public_access
-      - app_network
-
-  postgres:
-    image: postgres:latest
-    container_name: postgres_service
-    restart: unless-stopped
-    networks:
-      - internal_db_net
+      - iot_db_net
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: database
 
-  db_service:
-    image: db_service
+  iot_api:
+    image: api_service:latest
     restart: unless-stopped
     networks:
-      - internal_db_net
-      - app_network
+      - iot_net
+      - iot_db_net
     depends_on:
       - postgres
 
 networks:
   public_access:
     driver: bridge
-  internal_db_net: 
+  iot_net:
     driver: bridge
-  app_network:
+  iot_db_net: 
     driver: bridge
