--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,14 @@ POSTGRES_VERSION=15
 #--------------------------------------------------------------------------
 AFFINE_IMAGE_TAG=stable
 
+# Affine Database Configuration
+DB_USERNAME=affine_user
+DB_PASSWORD=your_secure_affine_password
+DB_DATABASE=affine
+DB_DATA_LOCATION=./notes/db_data
+UPLOAD_LOCATION=./notes/storage
+CONFIG_LOCATION=./notes/config
+
 #--------------------------------------------------------------------------
 # Obsidian LiveSync Configuration
 #--------------------------------------------------------------------------
