--- a/notes/docker-compose_example.yml
+++ b/notes/docker-compose_example.yml
@@ -4,7 +4,7 @@ services:
     image: ghcr.io/toeverything/affine-graphql:${AFFINE_REVISION:-stable}
     container_name: affine_server
     ports:
-      - '${PORT:-3010}:3010'
+      - "${PORT:-3010}:3010"
     depends_on:
       redis:
         condition: service_healthy
@@ -31,7 +31,7 @@ services:
       # custom configurations
       - ${UPLOAD_LOCATION}:/root/.affine/storage
       - ${CONFIG_LOCATION}:/root/.affine/config
-    command: ['sh', '-c', 'node ./scripts/self-host-predeploy.js']
+    command: ["sh", "-c", "node ./scripts/self-host-predeploy.js"]
     env_file:
       - .env
     environment:
@@ -48,7 +48,7 @@ services:
     image: redis
     container_name: affine_redis
     healthcheck:
-      test: ['CMD', 'redis-cli', '--raw', 'incr', 'ping']
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -63,13 +63,17 @@ services:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE:-affine}
-      POSTGRES_INITDB_ARGS: '--data-checksums'
-      # you better set a password for you database
-      # or you may add 'POSTGRES_HOST_AUTH_METHOD=trust' to ignore postgres security policy
-      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_INITDB_ARGS: "--data-checksums"
     healthcheck:
       test:
-        ['CMD', 'pg_isready', '-U', "${DB_USERNAME}", '-d', "${DB_DATABASE:-affine}"]
+        [
+          "CMD",
+          "pg_isready",
+          "-U",
+          "${DB_USERNAME}",
+          "-d",
+          "${DB_DATABASE:-affine}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
