Add SignaturePDF service configuration and update related files for integration

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,12 @@ NEXTCLOUD_DB_ROOT_PASSWORD=your_secure_mariadb_root_password
 MARIADB_VERSION=10.11
 
 #--------------------------------------------------------------------------
+# SignaturePDF Service Configuration
+#--------------------------------------------------------------------------
+SIGNATUREPDF_IMAGE_TAG=latest
+TZ=Europe/Berlin
+
+#--------------------------------------------------------------------------
 # Security Notes
 #--------------------------------------------------------------------------
 # 1. Use strong passwords (at least 16 characters with mixed case, numbers, symbols)
