Add Immich service configuration and update related files for integration

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,20 @@ SIGNATUREPDF_IMAGE_TAG=latest
 TZ=Europe/Berlin
 
 #--------------------------------------------------------------------------
+# Immich Service Configuration
+#--------------------------------------------------------------------------
+IMMICH_VERSION=release
+IMMICH_DB_USERNAME=immich
+IMMICH_DB_PASSWORD=your_secure_password_here
+IMMICH_DB_DATABASE_NAME=immich
+IMMICH_JWT_SECRET=your_jwt_secret_here
+IMMICH_UPLOAD_LOCATION=/path/to/immich/photos
+IMMICH_DB_DATA_PATH=/path/to/immich/postgres
+IMMICH_MODEL_CACHE_PATH=/path/to/immich/model-cache
+IMMICH_LOG_LEVEL=log
+TZ=Europe/Berlin
+
+#--------------------------------------------------------------------------
 # Security Notes
 #--------------------------------------------------------------------------
 # 1. Use strong passwords (at least 16 characters with mixed case, numbers, symbols)
