--- a/notes/docker-compose.yaml
+++ b/notes/docker-compose.yaml
@@ -70,6 +70,8 @@ services:
   redis:
     image: redis
     container_name: affine_redis
+    volumes:
+      - redis_data:/data
     networks:
       - notes_network
     healthcheck:
@@ -101,6 +103,12 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
+
+#--------------------------------------------------------------------------
+# Volumes - for persistent data
+#--------------------------------------------------------------------------
+volumes:
+  redis_data:
 
 #--------------------------------------------------------------------------
 # Networks - for service isolation
