--- a/immich/docker-compose.yaml
+++ b/immich/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
   #--------------------------------------------------------------------------
   immich-postgres:
     container_name: immich_postgres
-    image: tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
+    image: tensorchord/pgvecto-rs:pg14-v0.2.0
     environment:
       POSTGRES_PASSWORD: ${IMMICH_DB_PASSWORD}
       POSTGRES_USER: ${IMMICH_DB_USERNAME}
@@ -30,11 +30,13 @@ services:
         "-c",
         "logging_collector=on",
         "-c",
-        "max_wal_size=2GB",
+        "max_wal_size=1GB",
         "-c",
-        "shared_buffers=512MB",
+        "shared_buffers=256MB",
         "-c",
         "wal_compression=on",
+        "-c",
+        "max_connections=50",
       ]
     restart: unless-stopped
     networks:
@@ -45,7 +47,7 @@ services:
   #--------------------------------------------------------------------------
   immich-redis:
     container_name: immich_redis
-    image: redis:6.2-alpine@sha256:84882e87b54734154586e5f8abd4dce69fe7311315e2fc6d67c29614c8de2672
+    image: redis:6.2-alpine
     volumes:
       - redis_data:/data
     healthcheck:
@@ -60,9 +62,6 @@ services:
   immich-server:
     container_name: immich_server
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
-    # Expose port 2283 for direct access (optional - accessed via cloudflared)
-    ports:
-      - "2283:3001"
     volumes:
       - ${IMMICH_UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
