--- a/signaturepdf/docker-compose.yaml
+++ b/signaturepdf/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
   #--------------------------------------------------------------------------
   signaturepdf:
     image: xgaia/signaturepdf:${SIGNATUREPDF_IMAGE_TAG:-latest}
+    platform: linux/amd64
     container_name: signaturepdf
     # Expose port 8080 for direct access
     ports:
